# documentsA

./: 21 Lifestyle Hacks That Will Help Save You Money and Still Enjoy Life.docx  CV_mynul_Professional.doc  File_Handling_Background_Service.pptx  Haque Khandoker Mohd Mazidul.pfx  README.md  RfInfoSetup.cpp  Tinder Order.rtf  config.sh  index.html  ssh key.txt
ACQ/: ACQ ModbusTCP English.xlsx  Circuit breaker operating characteristic analysis device-circuit review (20211202).en.pptx  Circuit breaker operating characteristic analysis device-circuit review (20211202).kr.pptx  LU_CAN_통신구조_210728.ko.en.xlsx  LU_CAN_통신구조_210728.xlsx  ProtocolInfo_For_Web.xlsx  _20230327_ACQ Debug Menu.ko.en.docx  ~$0230327_ACQ Debug Menu.ko.en.docx  ~$0230501_ACQ TMS320F28377S FW 다운로드 방법.ko.en.docx  ~$차단기동작특성분석장치-ModbusTCP맵(20220222-초안).xlsx  차단기동작특성분석장치-ModbusTCP맵(20220222-초안).xlsx  차단기동작특성분석장치-ModbusTCP맵(20230608).xlsx  차단기동작특성분석장치-개발검토요청서(20210610-수정).hwp  차단기동작특성분석장치-개발검토요청서(20211013-수정).hwp  차단기동작특성분석장치-개발검토요청서.hwp  차단기동작특성분석장치-문의사항(20210412-세니온).hwp  프로토콜정보 (3).ko.en.xlsx  프로토콜정보 (3).xlsx
Altium/: 1743006628393.jfif
Arduino/: ._cnccode  ._pkkacodefinale.ino  pkkacodefinale.ino
Atmels/: CoreA.deb
CM0/: LCD_MIPI_DSI_001.docx  ~$D_MIPI_DSI_001.docx
CVs/: E7-1_Employment_Reason_KR.docx  E71이력서양식(첨부1) _A.doc  E71이력서양식(첨부1).doc  ELECTRONICS ENGINEER.docx  Haque Khandoker Mohd Mazidul V4.docx  Haque Khandoker Mohd Mazidul V4A.docx  Haque Khandoker Mohd Mazidul V4B.docx  Haque Khandoker Mohd Mazidul V5.docx  Haque Khandoker Mohd Mazidul V6.docx  KR_PCB_Haque_Khandoker_Mohd_Mazidul_KR.docx  ~$서_Haque_Khandoker_Mazidul.docx  이력서_Haque_Khandoker_Mazidul.docx  이력서_Haque_Khandoker_Mazidul_v2.docx
ESP32P4/Olimex/ESP32-P4-DevKit/SOFTWARE/Demo_Examples/lvgl_v8_port/main/: BOARD_OLIMEX_ESP32_P4_DEVKIT.h  CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
ESP32P4/Olimex/ESP32-P4-DevKit/SOFTWARE/Demo_Examples/mipi_csi_dsi/main/: BOARD_OLIMEX_ESP32_P4_DEVKIT.h  CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
FreeCADs/: Acryl01.20240925-132711.FCBak  Acryl02.FCStd.888355d1-264d-4047-a774-3836eae9be2d  Acryl04-BodySketch.dxf  Acryl04.20240925-161708.FCBak  Acryl04.FCStd  AcrylCut_B_06.ai  Acryl_B01.FCStd  Acryl_B02.FCStd  Acryl_B03.FCStd  Acryl_B04.20241013-224740.FCBak  Acryl_B05.20241013-230007.FCBak  Acryl_B06.FCStd  Acryl_B06.dxf  Braket-Body.step  Braket.FCStd  (+10 more)
(+2313 files in other folders)
